css-flexbox adjustment for the assignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,22 @@
 /*Schrijf hier jouw eigen CSS*/
+.container-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-2 div {
+    /*background-color: black;*/
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
